Add support for Java 14 and fixed a bug in parsing javadoc since tags